src/objects/sfsp__SalesNodeExternalAsset__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__AssetId__c</fullName>
        <externalId>true</externalId>
        <label>Asset Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__AssetType__c</fullName>
        <label>Asset Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Node</label>
        <referenceTo>sfsp__SalesNode__c</referenceTo>
        <relationshipLabel>External Assets</relationshipLabel>
        <relationshipName>ExternalAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Node External Asset</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node External Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>